0.7.0: (Future)
Features:
 - ELF support
 - Game Boy Camera support
 - Qt: Set default Game Boy colors
 - Game Boy Printer support
 - Super Game Boy support
Bugfixes:
 - GB Audio: Make audio unsigned with bias (fixes mgba.io/i/749)
 - Python: Fix importing .gb or .gba before .core
 - GBA: Reset active region as needed when loading a ROM
 - Qt: Fix command line debugger closing second game
 - GB Serialize: Fix audio state loading
 - GB Video: Fix dot clock timing being slightly wrong
 - GB MBC: Pocket Cam memory should be accessible without enabling
 - GB Memory: Initialize peripheral pointers
 - GB MBC: Fix SRAM sizes 4 and 5
 - GB Video: Fix 16-bit screenshots (fixes mgba.io/i/826)
 - GB Core: Fix palette loading when loading a foreign config
 - Qt: Fix LOG argument order
 - GB Memory: Prevent accessing empty SRAM (fixes mgba.io/i/831)
 - GB, GBA: Fix crashes when attempting to identify null VFiles
 - GB MBC: Fix RTC initialization (fixes mgba.io/i/825)
 - GB MBC: Fix RTC loading when file size is off
 - GB Serialize: Fix deserializing video STAT
Misc:
 - GBA Timer: Use global cycles for timers
 - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
 - All: Make FIXED_ROM_BUFFER an option instead of 3DS-only
 - Qt: Don't rebuild library view if style hasn't changed
 - Qt: Redo GameController into multiple classes
 - SDL: Fix 2.0.5 build on macOS under some circumstances

0.6.0: (2017-07-16)
Features:
 - Library view
 - Sprite viewer
 - Debugging console
 - Improved memory viewer
 - Memory search
 - Command line ability to override configuration values
 - Add option to allow preloading the entire ROM before running
 - Add option for whether rewinding restores save games
 - Savestates now contain any RTC override data
 - Add option to lock video to integer scaling
 - LR35902: Watchpoints
 - LR35902/GB-Z80 disassembler
 - GB: Tile viewer
 - GB: Video/audio channel enabling/disabling
 - GB: Symbol table support
 - GB MBC: Add MBC1 multicart support