@@ -5,6 +5,7 @@ Features:
  - Qt: Set default Game Boy colors
  - Game Boy Printer support
  - Super Game Boy support
+ - Customizable autofire speed
 Bugfixes:
  - GB Audio: Make audio unsigned with bias (fixes mgba.io/i/749)
  - Python: Fix importing .gb or .gba before .core
